# LuminaKraftLauncherAPI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.debian  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  main.py
app/models/: modpack.py  response.py
app/routers/: curseforge.py  modpacks.py  translations.py
app/services/: auth.py  data_loader.py
data/: launcher_data.json  modpacks.json
data/translations/: en.json  es.json
docs/: MODPACK_SCHEMA.md
examples/: new-modpack-example.json
scripts/: manage-modpacks.js  migrate-data.js
src/: curseforge.js  index.js
src/middleware/: auth.js
