[project]
name = "luminakraft-launcher-api"
version = "1.0.0"
description = "Backend API for LuminaKraft Launcher - serves modpack data and launcher information"
authors = [
    {name = "LuminaKraft Studios"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "httpx==0.25.2",
    "python-multipart==0.0.6"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[project.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 9374"
dev = "uvicorn app.main:app --host 0.0.0.0 --port 9374 --reload"